--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=test
 APP_SECRET=3c8246bdsf8ads9f9s0f809awf8u48utyc1278a
 ###< symfony/framework-bundle ###
 API_ENDPOINT=https://api.example.com/get-price
