- Replace outdated schema with new application architecture in `schema-app.puml`. - Refactor `.env.example` values for consistency and updated database configurations. - Add `SheetToKafkaCommandTest` for improved feature testing coverage. - Update `docker-compose.yml` and override to streamline environment variable loading. - Introduce Feature test suite in `phpunit.xml`. - Add `composer.lock` to track dependencies. - Update README to include architecture diagram reference.

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,24 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=test
-APP_SECRET=3c8246bdsf8ads9f9s0f809awf8u48utyc1278a
+APP_SECRET=3c8246b73f141c36c11d498c0ac1278a
 ###< symfony/framework-bundle ###
 API_ENDPOINT=https://api.example.com/get-price
 ###> symfony/messenger ###
 KAFKA_TRANSPORT_DSN=kafka://kafka:9093
 ###< symfony/messenger ###
 
+APP_DEBUG=false
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://postgres_edi_user:postgres_edi_password@postgres_edi_host:postgres_edi_port/suppliers?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
 
 ###> symfony/lock ###
 # Choose one of the stores below
@@ -31,14 +26,14 @@ DATABASE_URL="postgresql://postgres_edi_user:postgres_edi_password@postgres_edi_
 LOCK_DSN=flock
 ###< symfony/lock ###
 
-APP_SCHEMA=app_schema
-APP_EXT_SCHEMA=app_ext_schema
+APP_SCHEMA=edi_scraper
+APP_EXT_SCHEMA=external_bezoxx
 
 KERNEL_CLASS='App\Kernel'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-SLACK_WEBHOOK_URL=https://hooks.example.com/services/YOUR_WORKSPACE/YOUR_CHANNEL/YOUR_TOKEN
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 
 PROCESSING_PRODUCT_COUNT=100
 PRODUCT_COLOR_INTERSECTION=false
@@ -50,14 +45,12 @@ USE_PROXY=true
 WALMART_PRODUCT_WAIT_DAYS_BEFORE_RETRY=7
 
 ON_KAFKA_ERROR_SLEEP_TIME=60
-
 KAFKA_WAIT_MESSAGE_TIME=1000*60
-
 ON_KAFKA_MAX_ERROR_COUNT_REPEAT=15
 
-SPREADSHEET_ID=5Mb7w5XU1Fm8Ohmms2U_Cf5U-XaOJF5mU5pGgiSNJh8(invalid)
-CONSUME_MESSAGE_COUNT=10
-TAB_NAME_TO_MANAGE=RAW_ASIN_UPCS!A1:D
+SPREADSHEET_ID=YOUR_GOOGLE_SPREADSHEET_ID_FROM_URL_GOOGLE_SPREADSHEET
+CONSUME_MESSAGE_COUNT=10000
+TAB_NAME_TO_MANAGE=RAW_ASIN_UPCS!A1:F
 TAB_NAME_FROM_MANAGE=DONE_ASIN_UPCS!A1:D
 CLEAR_SHEET=DONE_ASIN_UPCS
 BATCH_ROWS_SHEET_COUNT=10000
@@ -70,9 +63,8 @@ GOOGLE_TO_ASINS_TOPIC=google_output
 ASINS_TO_GOOGLE_TOPIC=asins_to_google
 ASINS_TO_GOOGLE_INPUT_CONSUMER_GROUP=asins_to_google_input_consumer_group
 
-KAFKA_EDI_SERVER_HOST=localhost
-KAFKA_EDI_SERVER_PORT=9092
+KAFKA_EDI_SERVER_HOST=kafka
+KAFKA_EDI_SERVER_PORT=9093
 
 SP_API_MAX_ERROR_COUNT_REPEAT=10
 SP_API_ERROR_SLEEP_TIME=5
-
