--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-
 APP_ENV=test
 APP_SECRET=3c8246b73f141c36c11d498c0ac1278a
 
 API_ENDPOINT=https://api.example.com/get-price
 
 KAFKA_TRANSPORT_DSN=kafka://kafka:9093
-
 
 APP_DEBUG=false
 
@@ -16,7 +14,7 @@ LOCK_DSN=flock
 APP_SCHEMA=edi_scraper
 APP_EXT_SCHEMA=external_bezoxx
 
-KERNEL_CLASS='App\Kernel'
+KERNEL_CLASS=App\Kernel
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
