Add build log for `APP_ENV` to Dockerfile

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,78 @@
-name: Release
+name: Create Release
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+
+# Осмысленное имя ранa в Actions
+run-name: >-
+  Release: push on ${{ github.ref_name }} by ${{ github.actor }} (commit ${{ github.sha }})
 
 jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: read
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Get latest tag
-        id: tag
+        id: get_latest_tag
         run: |
-          LATEST=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          echo "latest=$LATEST" >> $GITHUB_OUTPUT
+          # Get the latest tag, if no tags exist use v0.0.0
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          echo "Latest tag: $LATEST_TAG"
 
       - name: Calculate next version
-        id: version
+        id: calculate_version
         run: |
-          VERSION="${{ steps.tag.outputs.latest }}"
-          VERSION=${VERSION#v}
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          echo "new=v${MAJOR}.${MINOR}.$((PATCH + 1))" >> $GITHUB_OUTPUT
+          LATEST_TAG="${{ steps.get_latest_tag.outputs.latest_tag }}"
 
-      - name: Generate changelog
+          # Remove 'v' prefix and split version
+          VERSION=${LATEST_TAG#v}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+
+          # Increment patch version
+          PATCH=$((PATCH + 1))
+
+          NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}"
+          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_VERSION"
+
+      - name: Generate changelog from commits
         id: changelog
         run: |
-          TAG="${{ steps.tag.outputs.latest }}"
-          RANGE=$([ "$TAG" = "v0.0.0" ] && echo "" || echo "$TAG..HEAD")
-          COMMITS=$(git log $RANGE --pretty=format:'- %s (`%h`)' 2>/dev/null || echo "- Initial release")
+          LATEST_TAG="${{ steps.get_latest_tag.outputs.latest_tag }}"
+
+          if [ "$LATEST_TAG" = "v0.0.0" ]; then
+            # Первый релиз: берём все коммиты
+            RANGE=""
+          else
+            RANGE="$LATEST_TAG..HEAD"
+          fi
+
+          echo "Generating changelog for range: ${RANGE:-all commits}"
+
+          REPO="$GITHUB_REPOSITORY"
+
+          # Список коммитов в Markdown:
+          # - Message (`short_sha`) ([view](https://github.com/owner/repo/commit/full_sha))
+          COMMITS=$(git log $RANGE \
+            --pretty=format:'- %s (`%h`) ([view](https://github.com/'"$REPO"'/commit/%H))')
+
+          if [ -z "$COMMITS" ]; then
+            COMMITS="- No commits since $LATEST_TAG (nothing to list)"
+          fi
+
           {
-            echo "body<<EOF"
+            echo "changelog<<EOF"
             echo "$COMMITS"
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
@@ -45,10 +80,19 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.version.outputs.new }}
-          name: ${{ steps.version.outputs.new }}
+          tag_name: ${{ steps.calculate_version.outputs.new_version }}
+          # Имя релиза в классическом формате
+          name: Release ${{ steps.calculate_version.outputs.new_version }}
+
           body: |
-            ## Changes
-            ${{ steps.changelog.outputs.body }}
+            ## Changes in this Release
+
+            Triggered by push to `${{ github.ref_name }}` (commit `${{ github.sha }}`)
+
+            ---
+
+            ### Commits since ${{ steps.get_latest_tag.outputs.latest_tag }}
+            ${{ steps.changelog.outputs.changelog }}
+
           draft: false
           prerelease: false
