--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,6 +62,15 @@ jobs:
         run: |
           docker compose exec -T php composer install --no-interaction --prefer-dist --optimize-autoloader
 
+      - name: Verify Xdebug installation
+        run: |
+          docker compose exec -T php php -v
+          docker compose exec -T php php -m | grep xdebug || echo "Xdebug not found"
+
+      - name: Create coverage directory
+        run: |
+          docker compose exec -T php mkdir -p var/coverage-report
+
       - name: Run PHPUnit with coverage
         run: |
           docker compose exec -e XDEBUG_MODE=${XDEBUG_MODE} php vendor/bin/phpunit \
@@ -69,16 +78,16 @@ jobs:
             --coverage-text \
             --coverage-html=var/coverage-report \
             --coverage-clover=var/coverage-report/phpunit-coverage.xml
-          
 
       - name: Copy coverage reports from container
         if: always()
         run: |
-          docker compose cp php:/var/www/amazon_asin_product_sync/var/coverage-report ./var/
+          mkdir -p ./var
+          docker compose cp php:/var/www/amazon_asin_product_sync/var/coverage-report ./var/ || echo "No coverage reports found in container"
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
-        if: always()
+        if: always() && hashFiles('var/coverage-report/**/*') != ''
         with:
           name: coverage-report
           path: var/coverage-report
